Kubernetes/Chai-aur-code/Creating-Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: my-nginx-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dep
                port:
                  number: 80
